--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "chalk": "^5.3.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
