--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "chalk": "^5.3.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.4",
     "mysql2": "^3.2.0",
