--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
+    "dev": "nodemon app"
   },
   "keywords": [],
   "author": "Abdullahi Mustafa",
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "chalk": "^5.3.0",
     "connect-mongo": "^5.1.0",
@@ -24,7 +25,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.1.0",
-    "mongoose": "^7.0.4",
+    "mongoose": "^7.6.5",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3"
   }
