--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "chalk": "^5.3.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "csrf": "^3.1.0",
@@ -28,6 +29,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.6.5",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.13",
     "sequelize": "^6.29.3"
   }
 }
