--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mongodb": "^5.1.0",
     "mongoose": "^7.6.5",
     "mysql2": "^3.2.0",
